# indian-education-system

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev-requirements.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  streamlit_deploy.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/: 2015_16_Districtwise.csv  india_states.geojson
notebooks/: exploration.ipynb
src/: __init__.py  analysis.py  cleaning.py  data_loader.py  geodata.py  report.py  utils.py  viz.py
src/indian_education_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_analysis.py  test_cleaning.py  test_data_loader.py  test_geodata.py  test_report.py
