[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-education-system"
version = "0.1.0"
description = "Interactive analytics and dashboard for Indian education indicators."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "streamlit>=1.25",
    "plotly>=6.0",
    "kaleido>=0.2",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "reportlab>=4.0",
    "missingno>=0.5",
    "pandas_datareader>=0.10",
    "requests>=2.31",
]

[project.scripts]
indian-education = "main:main"
